--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 :root{
     --cor0: #000000;
     --cor1: #4444;
-    --cor2: #100a3b;
+    --cor2: #0b053b;
     --cor3: #0b0524f8;
     --cor4: #b3a3ba;
     --branco: white ;
     --cor5: #e5e2e2;
-    --cor6: #0d0831cc;
+    --cor6: #090235cc;
     --font0: sans-serif;
     --ver: verdana;
 }
